@@ -68,5 +68,5 @@ public @interface CacheEvict {
 	 * or before. The latter causes the eviction to occur irrespective of the method outcome (whether
 	 * it threw an exception or not) while the former does not.
 	 */
-	boolean afterInvocation() default true;
+	boolean beforeInvocation() default false;
 }
