@@ -51,7 +51,7 @@ public class DefaultCacheableService implements CacheableService<Long> {
 	public void evictAll(Object arg1) {
 	}
 
-	@CacheEvict(value = "default", afterInvocation = false)
+	@CacheEvict(value = "default", beforeInvocation = true)
 	public void evictEarly(Object arg1) {
 		throw new RuntimeException("exception thrown - evict should still occur");
 	}
@@ -60,7 +60,7 @@ public class DefaultCacheableService implements CacheableService<Long> {
 	public void evict(Object arg1, Object arg2) {
 	}
 
-	@CacheEvict(value = "default", key = "#p0", afterInvocation = false)
+	@CacheEvict(value = "default", key = "#p0", beforeInvocation = true)
 	public void invalidateEarly(Object arg1, Object arg2) {
 		throw new RuntimeException("exception thrown - evict should still occur");
 	}
